# LiveScriber

./: .gitignore  DOCS.md  LiveScribe-Android-README.md  LiveScriber-Android-README.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  windows-installer.yml
installer/: LiveScribe.iss  LiveScriber.iss
livescribe/: __init__.py  app.py  config.py  i18n.py  main.py  recorder.py  styles.py  summarizer.py  transcriber.py
livescriber/: __init__.py  app.py  config.py  i18n.py  main.py  recorder.py  styles.py  summarizer.py  transcriber.py
scripts/: build_windows_installer.ps1  generate_license.py  install.ps1  install.sh  windows_launcher.py  windows_transcriber_helper.py
tests/: __init__.py  test_audio.py  test_config.py  test_imports.py
