[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livescribe"
version = "0.1.1"
description = "A floating desktop app for real-time meeting transcription and AI summarization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LiveScribe"},
]
dependencies = [
    "PyQt6>=6.5",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "faster-whisper>=1.0",
    "huggingface-hub>=0.21",
    "requests>=2.28",
    "openai>=1.0",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3.0",
]
dev = [
    "pyinstaller>=6.0",
    "ruff",
    "pytest",
]

[project.scripts]
livescribe = "livescribe.main:main"

[project.gui-scripts]
livescribe-gui = "livescribe.main:main"

[tool.setuptools.packages.find]
include = ["livescribe*"]

[tool.ruff]
line-length = 100
target-version = "py310"
