[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livescriber"
version = "0.2.0"
description = "A floating desktop app for real-time meeting transcription and AI summarization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LiveScriber"},
]
dependencies = [
    "PyQt6>=6.11.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "faster-whisper>=1.0",
    "huggingface-hub>=0.21",
    "requests>=2.28",
    "openai>=1.0",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3.0",
]
dev = [
    "pyinstaller>=6.0",
    "ruff",
    "pytest",
]

[project.scripts]
livescriber = "livescriber.main:main"

[project.gui-scripts]
livescriber-gui = "livescriber.main:main"

[tool.setuptools.packages.find]
include = ["livescriber*"]

[tool.ruff]
line-length = 100
target-version = "py310"
